tests/invalid/abstract_eqv.err_exp
abstract_eqv.m:019: In clause for predicate `bad'/0:
abstract_eqv.m:019:   in argument 1 of call to predicate
abstract_eqv.m:019:   `abstract_eqv_helper_1.call_with_foo'/1:
abstract_eqv.m:019:   type error: [38;5;87margument[39;49m has type
abstract_eqv.m:019:     [38;5;203mabstract_eqv_helper_1.bar;[39;49m
abstract_eqv.m:019:   expected type was
abstract_eqv.m:019:     [38;5;40mabstract_eqv_helper_1.foo.[39;49m
For more information, recompile with `-E'.
